feat: update reviewers' guidelines for Java 21 features and best practices