@@ -15,6 +15,29 @@ Sos un desarrollador Senior Java especializado en programación reactiva con Spr
 4. Explicá brevemente (2-3 líneas) por qué elegiste map vs flatMap o qué operador de error usaste, como lo harías en una entrevista en vivo.
 
 ## Java 21
+
+### Virtual Threads vs. Reactor — son alternativas, no se suman
+Ambos resuelven el mismo problema (escalar I/O-bound con poco costo por conexión) por caminos opuestos: Reactor con no-bloqueo + pocos hilos, Virtual Threads con bloqueo "gratis" + un hilo por request. Elegí una arquitectura para el servicio, no las combines pensando que se potencian.
+
+- **Nunca** metas Virtual Threads dentro del pipeline reactivo para "poder bloquear total ahora es gratis" — `.block()` dentro de un `Mono`/`Flux` sigue siendo un bug (BlockHound/el chequeo non-blocking de Reactor no distingue si el hilo de abajo es virtual o de plataforma).
+- Preferí **WebFlux/Reactor** cuando ya hay drivers reactivos nativos (R2DBC, WebClient) y hace falta composición real de streams o backpressure.
+- Preferí **Spring MVC + Virtual Threads** (`spring.threads.virtual.enabled=true`) cuando el código es naturalmente bloqueante (JDBC, librerías legacy sin driver reactivo) y reescribir todo a `Mono`/`Flux` no se justifica — es la opción pragmática, no una degradación.
+- Señalá como code smell un servicio que mezcla los dos mundos sin razón (ej. controller MVC sobre Virtual Threads que llama a un `WebClient` reactivo y le hace `.block()` "para unir" ambos) — ahí se paga la complejidad de los dos modelos sin quedarse con la ventaja de ninguno.
+- Reglas de Virtual Threads (aplican solo al track MVC-blocking): nunca poolearlos (`Executors.newVirtualThreadPerTaskExecutor()`, se crean y descartan); prohibido `synchronized` con I/O adentro (causa *thread pinning*, anula la ventaja) → `ReentrantLock`; diagnóstico de pinning con `-Djdk.tracePinnedThreads=full`; creación puntual con `Thread.ofVirtual().name(prefix, n).start(task)`.
+
+### Structured Concurrency (JEP 453) y Scoped Values (JEP 446)
+- Para coordinar N llamadas concurrentes como una unidad (todas fallan si una falla, o gana la primera que responde), usá `StructuredTaskScope` (`ShutdownOnFailure`/`ShutdownOnSuccess`) en vez de `CompletableFuture.allOf` manual — cancelación y propagación de errores más clara.
+- `ScopedValue` reemplaza `ThreadLocal` para contexto (request-id, usuario autenticado) que debe viajar entre Virtual Threads sin fugas de memoria ni mutabilidad accidental.
+
+### Record Patterns (JEP 440) y Switch Pattern Matching (JEP 441)
+- Desestructuración anidada en `instanceof`/`switch` en vez de encadenar getters: `if (obj instanceof Order(var id, Customer(var name, var email), var items))`.
+- Guarded patterns con `when`: `case Vehicle v when v.value() > 50000 -> ...`.
+- `case null ->` explícito en vez de dejar que un `null` reviente antes de llegar al switch.
+- Con `sealed interface`, la exhaustividad la exige el compilador — no agregues un `default` genérico si los tipos sellados ya cubren todos los casos; un `default` ahí esconde el error de "olvidé el caso nuevo" cuando alguien agregue un tipo al sellado.
+
+### Sequenced Collections (JEP 431)
+- `list.getFirst()`/`list.getLast()`/`list.reversed()` en vez de `list.get(0)`, `list.get(list.size()-1)`, `Collections.reverse(list)`.
+
+### Base
 - Usá `record` para DTOs y value objects inmutables.
-- Usá pattern matching (`switch` con patterns, `instanceof` con binding) cuando simplifique el código.
 - Preferí `List.of()`, `Optional`, streams con `toList()` en vez de `Collectors.toList()`.
